<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg"
    tools:context="com.example.rentziyou.UserInterFaceActivity" >

    <EditText 
	    android:id="@+id/pw"
	    android:layout_width="300dp"
	    android:layout_height="45dp"
	    android:layout_below="@+id/login_top_layout"
	    android:textColor="#aaaaaa"
	    android:textSize="15sp"
	    android:layout_marginTop="25dp"
	    android:layout_marginLeft="10dp"
	    android:background="@drawable/login_selector"
	    android:inputType="textPassword"
	    android:hint="@string/writepw"/>
    
<EditText 
	    android:id="@+id/againpw"
	    android:layout_width="300dp"
	    android:layout_height="45dp"
	    android:layout_below="@+id/pw"
	    android:textColor="#aaaaaa"
	    android:textSize="15sp"
	    android:layout_marginTop="25dp"
	    android:layout_marginLeft="10dp"
	    android:background="@drawable/login_selector"
	    android:inputType="textPassword"
	    android:hint="@string/writepwagain"/>
	<Button
	        android:id="@+id/register_bt"
	        android:layout_width="100dp"
	        android:layout_height="40dp"
	        android:layout_marginRight="20dp"
	        android:layout_below="@+id/againpw"
	        android:layout_alignParentRight="true"
	        android:text="@string/register"
	        android:background="@drawable/main_login_selector"
	        android:textColor="#ffffff"
	        />

</RelativeLayout>
