<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
     <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_top_bar"
        android:background="#1E90FF" >

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:onClick="back"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:scaleType="centerInside"
            android:src="@drawable/top_bar_back" />

        <View
            android:id="@+id/view_temp"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@id/iv_back"
            android:background="#14191A" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/view_temp"
            android:text="添加时段"
            android:textColor="#ffffff"
            android:textSize="18sp" />
     
    </RelativeLayout>   
    
        <RelativeLayout
            android:id="@+id/get_time_one"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" >

            <TextView
                android:id="@+id/begin"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/beginRent"
                android:textSize="17sp" >
            </TextView>

            <Button
                android:id="@+id/setTimeBtn"
                android:layout_width="40dp"
                android:layout_height="43dp"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@id/begin"
                
                android:background="@drawable/main_login_selector"
                android:text="@string/begin"
                android:textColor="#ffffff"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/get_time_two"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/get_time_one"
            android:layout_marginTop="20dp" >

            <TextView
                android:id="@+id/end"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/endRent"
                android:textSize="18sp" >
            </TextView>

            <Button
                android:id="@+id/endTimeBtn"
                android:layout_width="40dp"
                android:layout_height="43dp"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@id/end"
                android:background="@drawable/main_login_selector"
                android:text="@string/end"
                android:textColor="#ffffff"
                android:textSize="18sp" />
        </RelativeLayout>
    
    
    <RelativeLayout
    android:id="@+id/get_qe"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/get_time_two"
    android:layout_marginTop="20dp" >

	     <Button
	        android:id="@+id/add"
	        android:layout_width="100dp"
	        android:layout_height="40dp"
	        android:layout_marginRight="20dp"
	        android:layout_alignParentRight="true"
	        android:text="@string/judge_add"
	        android:background="@drawable/main_login_selector"
	        android:textColor="#ffffff"
	        />
	
	</RelativeLayout>

</LinearLayout>


	    
        
        
            
