<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ebebeb"
    android:orientation="vertical" >
	 <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_top_bar"
        android:background="@color/common_top_bar_blue" >

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:onClick="back"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:scaleType="centerInside"
            android:src="@drawable/top_bar_back" />

        <View
            android:id="@+id/view_temp"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@id/iv_back"
            android:background="#14191A" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/view_temp"
            android:text="修改密码"
            android:textColor="#ffffff"
            android:textSize="18sp" />
        
       
    </RelativeLayout>
	<RelativeLayout 
	    android:id="@+id/old_pwd_layout"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="20dp"
	    >  
	        <TextView
	        android:id="@+id/change_old_pwd"
	        android:layout_width="85dp"
	        android:layout_height="35dp"
	        android:layout_marginLeft="20dp"
	         android:gravity="center_vertical|left"
	          android:textSize="20dp"
	        android:text="@string/old_pwd"
	         />



	<EditText
	    android:id="@+id/get_old_pwd"
	    android:layout_width="match_parent"
	    android:layout_height="48dp"
	    android:layout_below="@+id/change_old_pwd"
	    android:layout_marginLeft="20dp"
	    android:background="@drawable/login_selector"
	    android:ems="10"
	    android:inputType="textPassword"
	    android:textColor="#aaaaaa"
	    android:textSize="17sp" >

	    <requestFocus />
	</EditText>

	<EditText
	    android:id="@+id/get_new_pwd_again"
	    android:layout_width="match_parent"
	    android:layout_height="48dp"
	    android:layout_alignLeft="@+id/get_new_pwd"
	    android:layout_alignRight="@+id/get_new_pwd"
	    android:layout_centerVertical="true"
	    android:background="@drawable/login_selector"
	     android:layout_below="@+id/get_new_pwd"
	    android:ems="10"
	    android:hint=" 再次输入新密码"
	    android:inputType="textPassword"
	    android:textColor="#aaaaaa"
	    android:textSize="17sp" />
	
	<Button
	    android:id="@+id/confirm"
	    android:layout_width="match_parent"
	    android:layout_height="48dp"
	    android:layout_alignLeft="@+id/get_new_pwd_again"
	    android:layout_alignRight="@+id/get_new_pwd_again"
	    
	    android:layout_below="@+id/get_new_pwd_again"
	    android:layout_marginTop="42dp"
	    android:background="@drawable/main_login_selector"
	    android:text="@string/confirm"
	    android:textColor="#ffffff" />

	<TextView
	    android:id="@+id/change_new_pwd"
	    android:layout_width="85dp"
	    android:layout_height="40dp"
	    android:layout_alignLeft="@+id/get_old_pwd"
	    android:layout_below="@+id/get_old_pwd"
	    android:gravity="center_vertical|left"
	    android:text="@string/new_pwd"
	    android:textSize="20dp" />

	<EditText
	    android:id="@+id/get_new_pwd"
	    android:layout_width="match_parent"
	    android:layout_height="48dp"
	    android:layout_alignLeft="@+id/change_new_pwd"
	    android:layout_below="@+id/change_new_pwd"
	    android:background="@drawable/login_selector"
	    android:ems="10"
	    android:inputType="textPassword"
	    android:textColor="#aaaaaa"
	    android:textSize="17sp" />
	
	</RelativeLayout>

</LinearLayout>
