<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:orientation="vertical">

  <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_top_bar"
        android:background="#1E90FF" >

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:onClick="back"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:scaleType="centerInside"
            android:src="@drawable/top_bar_back" />

        <View
            android:id="@+id/view_temp"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@id/iv_back"
            android:background="#14191A" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/view_temp"
            android:text="完善充电站信息"
            android:textColor="#ffffff"
            android:textSize="18sp" />
        
       
    </RelativeLayout>
<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    
 <RelativeLayout 
	    android:id="@+id/get_vfc2"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="20dp"
	    android:layout_below="@+id/login_top_layout"
	    >  
	        
    <Button
	        android:id="@+id/select_img"
	        android:layout_width="120dp"
	        android:layout_height="40dp"
	        android:layout_marginRight="20dp"
	        android:layout_marginTop="100dp"
	        android:layout_alignParentRight="true"
	        android:text="选充电站图片"
	        android:background="@drawable/main_login_selector"
	        android:textColor="#ffffff"
	        />

      <ImageView
        android:id="@+id/image"
         android:layout_width="250dp"
	     android:layout_height="250dp" 
	     android:layout_toLeftOf="@+id/select_img"
	     android:layout_marginRight="5dp"/>
	
	    </RelativeLayout>
    
     <TextView
        android:id="@+id/tap_text"
         android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:textSize="15sp"
	    android:layout_marginTop="25dp"
	    android:layout_marginLeft="10dp"
             android:layout_below="@+id/get_vfc2" 
          
        />
	<EditText 
	    android:id="@+id/parklotName"
	    android:layout_width="300dp"
	    android:layout_height="45dp"
	    android:layout_below="@+id/tap_text"
	    android:textColor="#aaaaaa"
	    android:textSize="15sp"
	    android:paddingLeft="5dp"
	    android:paddingRight="15dp"
	    android:layout_marginTop="25dp"
	    android:layout_marginLeft="10dp"
	    android:background="@drawable/login_selector"
	    android:hint="@string/add_parkname_hint"/>
	<RelativeLayout 
	    android:id="@+id/get_vfc"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="20dp"
	    android:layout_below="@+id/parklotName"
	    >  
	        
	<EditText 
	    android:id="@+id/helpAddress"
	    android:layout_width="300dp"
	    android:layout_height="45dp"
	    android:textColor="#aaaaaa"
	    android:textSize="15sp"
	    android:paddingLeft="5dp"
	    android:paddingRight="15dp"
	    android:layout_marginTop="25dp"
	    android:layout_marginLeft="10dp"
	    android:background="@drawable/login_selector"
	    android:hint="@string/add_helpaddress_hint"/> 
	
	    </RelativeLayout>




<RelativeLayout 
         android:id="@+id/get_qe"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="20dp"
	    android:layout_below="@+id/get_vfc"
	    >
	     <Button
	        android:id="@+id/judge_add"
	        android:layout_width="100dp"
	        android:layout_height="40dp"
	        android:layout_marginRight="20dp"
	        android:layout_alignParentRight="true"
	        android:text="@string/judge_add"
	        android:background="@drawable/main_login_selector"
	        android:textColor="#ffffff"
	        />
	
	</RelativeLayout>

</RelativeLayout>
</LinearLayout>